--- a/popup/popup.html
+++ b/popup/popup.html
@@ -5,9 +5,44 @@
     <meta charset="UTF-8">
 </head>
 
-<body style="width: 100px" ;>
-    <h2>색 변경</h2>
-    <div>색 변경 트리거 : R</div>
+<body>
+    <div style="width: 400px; height: 550px; position: relative">
+        <div style="width: 400px; height: 550px; left: 0px; top: 0px; position: absolute; background: white">
+            <div
+                style="width: 400px; height: 50px; left: 0px; top: 0px; position: absolute; border-bottom: 1px #ACACAC solid">
+            </div>
+            <div style="width: 379px; height: 50px; left: 10px; top: 0px; position: absolute">
+                <span
+                    style="color: black; font-size: 22px; font-family: Pragati Narrow; font-weight: 700; word-wrap: break-word">Thipser</span>
+                <span
+                    style="color: black; font-size: 22px; font-family: Pragati Narrow; font-weight: 400; word-wrap: break-word">:
+                    Thoughtful Whisper</span>
+            </div>
+            <div style="width: 360px; height: 50px; left: 20px; top: 474px; position: absolute">
+                <div
+                    style="width: 360px; height: 50px; left: 0px; top: 0px; position: absolute; background: #323949; border-radius: 7px">
+                </div>
+                <button id="whisper-button"
+                    style="width: 150px; height: 28px; left: 105px; top: 6px; position: absolute; color: white; font-size: 18px; font-family: Pragati Narrow; font-weight: 700; word-wrap: break-word; background-color: transparent; border: none; outline: none; text-align: center;">
+                    do whisper
+                </button>
+
+            </div>
+            <div style="width: 400px; height: 232px; left: 0px; top: 146px; position: absolute; background: #A2AAB9">
+            </div>
+            <div
+                style="width: 371px; height: 31px; left: 14px; top: 88px; position: absolute; text-align: center; color: black; font-size: 16px; font-family: Pragati Narrow; font-weight: 400; word-wrap: break-word">
+                Thisper visualizes comments to mitigate polarization and provides awareness against bias.
+            </div>
+            <div
+                style="width: 371px; height: 31px; left: 14px; top: 416px; position: absolute; text-align: center; color: black; font-size: 14px; font-family: Gowun Dodum; font-weight: 400; word-wrap: break-word">
+                Thisper은 댓글을 시각화하여 양극화를 완화하고 <br />편향에 대해 경각심을 제공합니다
+            </div>
+        </div>
+        <img style="width: 191px; height: 155px; left: 104px; top: 177px; position: absolute"
+            src="../img/Group 311.png" />
+    </div>
 </body>
+<script src="popup.js"></script>
 
 </html>
