--- a/popup/popup.html
+++ b/popup/popup.html
@@ -4,17 +4,18 @@
 <head>
     <meta charset="UTF-8">
     <style>
+        @import url('https://fonts.googleapis.com/css2?family=Pragati+Narrow&display=swap');
+
         .loader {
             border: 2px solid #f3f3f3;
             border-radius: 50%;
-            border-top: 2px solid #3498db;
+            border-top: 2px solid #323949;
             width: 24px;
             height: 24px;
             animation: spin 2s linear infinite;
             position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
+            top: calc(50% - 14px);
+            left: calc(50% - 14px);
         }
 
         @keyframes spin {
@@ -26,6 +27,10 @@
                 transform: rotate(360deg);
             }
         }
+
+        button {
+            font-family: 'Pragati Narrow', sans-serif;
+        }
     </style>
 </head>
 
@@ -34,7 +39,7 @@
         <div
             style="width: 400px; height: 50px; left: 0px; top: 0px; position: absolute; border-bottom: 1px #ACACAC solid">
         </div>
-        <div style="width: 379px; height: 50px; left: 6px; top: 0px; position: absolute"><span
+        <div style="width: 379px; height: 50px; left: 6px; top: 5px; position: absolute"><span
                 style="color: black; font-size: 20px; font-family: Pragati Narrow; font-weight: 700; word-wrap: break-word">Thipser
             </span><span
                 style="color: black; font-size: 20px; font-family: Pragati Narrow; font-weight: 400; word-wrap: break-word">:
@@ -49,7 +54,7 @@
         <div
             style="width: 371px; height: 31px; left: 14px; top: 88px; position: absolute; text-align: center; color: #E61D1D; font-size: 16px; font-family: Pragati Narrow; font-weight: 400; word-wrap: break-word">
             Thisper visualizes comments to mitigate polarization and provides awareness against bias.</div>
-        <img style="width: 269px; height: 236px; left: 70px; top: 169px; position: absolute"
+        <img style="width: 269px; height: 236px; left: 70px; top: 170px; position: absolute"
             src="../img/Group 311.png" />
     </div>
 </body>
