--- a/popup/popup.html
+++ b/popup/popup.html
@@ -47,7 +47,7 @@
         <button id="whisper-button"
             style="width: 300px; height: 50px; left: 80px; top: 455px; position: absolute; background: #323949; border-radius: 7px; color: white; font-size: 18px; font-family: Pragati Narrow; font-weight: 700; word-wrap: break-word; text-align: center;">do
             whisper</button>
-        <button
+        <button id="loader-button"
             style="width: 50px; height: 50px; left: 20px; top: 455px; position: absolute; background: #CBD1DC; border-radius: 7px; border: none; position: relative;">
             <div class="loader"></div>
         </button>
