[Style] 텍스트 색 변경

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -52,7 +52,7 @@
             <div class="loader"></div>
         </button>
         <div
-            style="width: 371px; height: 31px; left: 14px; top: 88px; position: absolute; text-align: center; color: #E61D1D; font-size: 16px; font-family: Pragati Narrow; font-weight: 400; word-wrap: break-word">
+            style="width: 371px; height: 31px; left: 14px; top: 88px; position: absolute; text-align: center; color: #000000; font-size: 16px; font-family: Pragati Narrow; font-weight: 400; word-wrap: break-word">
             Thisper visualizes comments to mitigate polarization and provides awareness against bias.</div>
         <img style="width: 269px; height: 236px; left: 70px; top: 170px; position: absolute"
             src="../img/Group 311.png" />
