--- a/chatbot/chatbot.html
+++ b/chatbot/chatbot.html
@@ -12,12 +12,20 @@
         <button id="back-button"><i class="fa-solid fa-arrow-left-long"></i></button>
         Thisper
         <button id="help-button"><i class="fa-solid fa-question"></i></button>
+
+    </div>
+    <div id="popup" class="hidden">
+        <button id="close-button"><i class="fa-solid fa-x"></i></button>
+        <p>챗봇 이용 매뉴얼: 1. 질문을 입력하세요. 2. ASK 버튼을 누르세요. 3. 챗봇이 답변을 줄 거에요. 4. 다른 질문이 있다면 다시 입력하시면 돼요.</p>
     </div>
     <div id="chat-space"><!--채팅 공간--></div>
     <div id="footer">
-        <textarea id="input-text" type="text" placeholder="ask to Thisper"></textarea>
+        <input id="input-text" type="text" placeholder="ask to Thisper"></>
         <button id="send-button">ASK</button>
     </div>
+
+
+
 </body>
 <script src="chatbot.js"></script>
 
