[Style] 응답 대기 시 로딩 아이콘

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="../styles/popup.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 
 <body>
@@ -13,9 +14,12 @@
             <span id="bold-title">Thipser</span>
             <span id="normal-title">: Thoughtful Whisper</span>
         </div>
-        <button id="whisper-button">do whisper</button>
-        <button id="loader-button">
+        <button id="whisper-button">
+            do whisper
             <div class="loader"></div>
+        </button>
+        <button id="reset-button">
+            <i class="fa-solid fa-rotate-right"></i>
         </button>
         <div id="description">
             Thisper visualizes comments to mitigate polarization and provides awareness against bias.
