[Style] 초기화면 말풍선 추가

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -25,6 +25,9 @@
             Thisper visualizes comments to mitigate polarization and provides awareness against bias.
         </div>
         <img id="image" src="../img/Group 311.png" />
+        <img id="image1" src="../img/Group 354.png" />
+        <img id="image2" src="../img/Group 355.png" style="display: none;" />
+
     </div>
 </body>
 <script src="popup.js"></script>
