--- a/popup/popup.html
+++ b/popup/popup.html
@@ -25,7 +25,7 @@
             Thisper visualizes comments to mitigate polarization and provides awareness against bias.
         </div>
         <img id="image" src="../img/Group 311.png" />
-        <img id="image1" src="../img/Group 354.png" />
+        <img id="image1" src="../img/Group 354.png" style="display: none;" />
         <img id="image2" src="../img/Group 355.png" style="display: none;" />
 
     </div>
