[Feat] 상황별 메시지

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -24,10 +24,14 @@
         <div id="description">
             Thisper visualizes comments to mitigate polarization and provides awareness against bias.
         </div>
-        <img id="image" src="../img/Group 311.png" />
-        <img id="image1" src="../img/Group 354.png" style="display: none;" />
-        <img id="image2" src="../img/Group 355.png" style="display: none;" />
-
+        <img id="image" src="../img/Thisper.png" />
+        <img id="image1" src="../img/Hello.png" style="display: none;" />
+        <img id="image2" src="../img/Chat.png" style="display: none;" />
+        <img id="image3" src="../img/FetchError.png" style="display: none;" />
+        <img id="image4" src="../img/WrongLink.png" style="display: none;" />
+        <img id="image5" src="../img/Response.png" style="display: none;" />
+        <img id="image6" src="../img/End.png" style="display: none;" />
+        <img id="image7" src="../img/Reset.png" style="display: none;" />
     </div>
 </body>
 <script src="popup.js"></script>
