[Feat] 챗봇 매뉴얼

--- a/chatbot/chatbot.html
+++ b/chatbot/chatbot.html
@@ -16,11 +16,44 @@
     </div>
     <div id="popup" class="hidden">
         <button id="close-button"><i class="fa-solid fa-x"></i></button>
-        <p>챗봇 이용 매뉴얼: 1. 질문을 입력하세요. 2. ASK 버튼을 누르세요. 3. 챗봇이 답변을 줄 거에요. 4. 다른 질문이 있다면 다시 입력하시면 돼요.</p>
+        <div id="textbox">
+            <p id="intro">Hello! Welcome to Thisper, your personal comment coaching tool. Here are some guidelines on
+                how to
+                interact
+                with Thisper:</p>
+            <p>Step 1 > Enter your comment: Write down the comment you want to post in the text box provided at the
+                bottom.
+                Thisper
+                will analyze your comment and provide coaching based on its content.</p>
+            <p>Step 2 > Receive coaching: After submitting your comment, Thisper will provide feedback on how to make it
+                more constructive and less likely to cause conflicts. Please note that Thisper's coaching may not be
+                perfect
+                yet, and we appreciate your understanding.</p>
+            <p>
+                Step 3 > Revise your comment: Based on Thisper's feedback, you can revise your comment to make it more
+                conducive to healthy and meaningful discussions.
+            </p>
+        </div>
+
+        <p id="aware">
+            AWARE!
+        </p>
+        <p>
+            Please be aware that Thisper is an AI and does not advocate any particular ideology or group. It is
+            designed
+            to foster a positive online environment by helping users express their opinions in a respectful and
+            understanding manner. Its feedback is based on its programming and is not influenced by any external
+            biases
+            or beliefs.
+        </p>
+        <p>
+            By using Thisper, you agree to use it responsibly and respect the opinions and feelings of others. Let's
+            create a better, more respectful online community together!</p>
+
     </div>
     <div id="chat-space"><!--채팅 공간--></div>
     <div id="footer">
-        <input id="input-text" type="text" placeholder="ask to Thisper"></>
+        <input id="input-text" type="text" placeholder="ask to Thisper"></pㅔ>
         <button id="send-button">ASK</button>
     </div>
 
