--- a/popup/popup.html
+++ b/popup/popup.html
@@ -25,6 +25,7 @@
             Thisper visualizes comments to mitigate polarization and provides awareness against bias.
         </div>
         <img id="image" src="../img/Thisper.png" />
+        <img id="image0" src="../img/guide.png" style="display: none;" />
         <img id="image1" src="../img/Hello.png" style="display: none;" />
         <img id="image2" src="../img/Chat.png" style="display: none;" />
         <img id="image3" src="../img/FetchError.png" style="display: none;" />
@@ -32,6 +33,7 @@
         <img id="image5" src="../img/Response.png" style="display: none;" />
         <img id="image6" src="../img/End.png" style="display: none;" />
         <img id="image7" src="../img/Reset.png" style="display: none;" />
+
     </div>
 </body>
 <script src="popup.js"></script>
