--- a/popup/popup.html
+++ b/popup/popup.html
@@ -22,7 +22,7 @@
             <i class="fa-solid fa-rotate-right"></i>
         </button>
         <div id="description">
-            Thisper visualizes comments to mitigate polarization and provides awareness against bias.
+            Rather than just accepting comments, why not review them through Thisper's lens? Click on 'do whisper'!
         </div>
         <img id="image" src="../img/Thisper.png" />
         <img id="image0" src="../img/guide.png" style="display: none;" />
